--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#" class="logo" onclick="showPage('home')">
                 <span class="logo-text">RaqamIT</span>
             </a>
+            
             <div class="nav-controls">
                 <!-- Theme toggle buttons with icons -->
                 <button id="theme-toggle-light" class="theme-btn">
@@ -32,6 +33,8 @@
                 <button id="language-toggle-btn" class="language-btn">
                     <span id="language-text">العربية</span>
                 </button>
+                <p class="language-btn"><a href="#" onclick="showPage('policy')" data-en="Policy" data-ar="السياسة">Policy</a></p>
+                
             </div>
         </nav>
     </header>
