--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button id="language-toggle-btn" class="language-btn">
                     <span id="language-text">العربية</span>
                 </button>
-                <p class="language-btn"><a href="#" onclick="showPage('policy')" data-en="Policy" data-ar="السياسة">Policy</a></p>
+                <p class="language-btn"><a href="#policy" onclick="showPage('policy')" data-en="Policy" data-ar="السياسة">Policy</a></p>
                 
             </div>
         </nav>
@@ -80,25 +80,25 @@
                     <div class="card app-card">
                         <img src="https://placehold.co/150x150/d1d5db/4b5563?text=Huruf" alt="Huruf App Icon" style="border-radius: 0.75rem; margin-bottom: 1rem;">
                         <div class="app-details">
-                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Huruf: Arabic Word Game" data-ar="حروف: لعبة الكلمات العربية">Huruf: Arabic Word Game</h3>
+                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Huruf - حُرُوف" data-ar="حروف: لعبة الكلمات العربية">Huruf - حُرُوف</h3>
                             <p style="margin-bottom: 1rem;" data-en="A word-finding game that challenges players to create as many Arabic words as possible from a grid of letters. Great for improving vocabulary." data-ar="لعبة للعثور على الكلمات تتحدى اللاعبين لإنشاء أكبر عدد ممكن من الكلمات العربية من شبكة من الحروف. رائعة لتحسين المفردات.">A word-finding game that challenges players to create as many Arabic words as possible from a grid of letters. Great for improving vocabulary.</p>
                             <a href="#" class="btn-primary" style="align-self: flex-start;" onclick="showAppDetails('huruf')" data-en="Learn More" data-ar="تعرف على المزيد">Learn More</a>
                         </div>
                     </div>
                     <!-- Tarkib App Card -->
-                    <div class="card app-card">
+                    <!-- <div class="card app-card">
                         <img src="https://placehold.co/150x150/d1d5db/4b5563?text=Tarkib" alt="Tarkib App Icon" style="border-radius: 0.75rem; margin-bottom: 1rem;">
                         <div class="app-details">
                             <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Tarkib: Scrabble-like Game" data-ar="تركيب: لعبة شبيهة بـ Scrabble">Tarkib: Scrabble-like Game</h3>
                             <p style="margin-bottom: 1rem;" data-en="A highly engaging multi-player game where players score points by building words on a board, with bonus squares and strategic play." data-ar="لعبة جماعية جذابة للغاية حيث يسجل اللاعبون النقاط عن طريق بناء الكلمات على لوحة، مع مربعات إضافية ولعب استراتيجي.">A highly engaging multi-player game where players score points by building words on a board, with bonus squares and strategic play.</p>
                             <a href="#" class="btn-primary" style="align-self: flex-start;" onclick="showAppDetails('tarkib')" data-en="Learn More" data-ar="تعرف على المزيد">Learn More</a>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- Arabic Word Finder App Card -->
                     <div class="card app-card">
                         <img src="https://placehold.co/150x150/d1d5db/4b5563?text=Finder" alt="Word Finder App Icon" style="border-radius: 0.75rem; margin-bottom: 1rem;">
                         <div class="app-details">
-                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Arabic Word Finder" data-ar="باحث الكلمات العربية">Arabic Word Finder</h3>
+                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Word Finder - ar | en" data-ar="باحث الكلمات العربية">Word Finder - ar | en</h3>
                             <p style="margin-bottom: 1rem;" data-en="An invaluable tool for students and writers, this app helps you find perfect Arabic words by searching for synonyms, definitions, and related terms." data-ar="أداة لا تقدر بثمن للطلاب والكتّاب، يساعدك هذا التطبيق على العثور على الكلمات العربية المثالية من خلال البحث عن المرادفات والتعريفات والمصطلحات ذات الصلة.">An invaluable tool for students and writers, this app helps you find perfect Arabic words by searching for synonyms, definitions, and related terms.</p>
                             <a href="#" class="btn-primary" style="align-self: flex-start;" onclick="showAppDetails('wordFinder')" data-en="Learn More" data-ar="تعرف على المزيد">Learn More</a>
                         </div>
@@ -167,7 +167,7 @@
                 <h3 class="footer-title" data-en="Quick Links" data-ar="روابط سريعة">Quick Links</h3>
                 <ul class="footer-links">
                     <li><a href="#" onclick="showPage('home')" data-en="Home" data-ar="الرئيسية">Home</a></li>
-                    <li><a href="#" onclick="showPage('policy')" data-en="Policy" data-ar="السياسة">Policy</a></li>
+                    <li><a href="#policy" onclick="showPage('policy')" data-en="Policy" data-ar="السياسة">Policy</a></li>
                 </ul>
             </div>
             <div>
@@ -181,7 +181,7 @@
             <div>
                 <h3 class="footer-title" data-en="Contact" data-ar="اتصال">Contact</h3>
                 <p data-en="Email: info@raqamit.com" data-ar="البريد الإلكتروني: info@raqamit.com">Email: info@raqamit.com</p>
-                <p data-en="Phone: +1 (555) 123-4567" data-ar="الهاتف: 7654-321-555 (1)+">Phone: +1 (555) 123-4567</p>
+                <p data-en="Phone: +234 xxxx-xxx-xxx" data-ar="الهاتف: xxxx-xxx-xxx (234)+">Phone: +234 xxxx-xxx-xxx</p>
             </div>
         </div>
     </footer>
