--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <button id="language-toggle-btn" class="language-btn">
                     <span id="language-text">العربية</span>
                 </button>
-                <p class="language-btn"><a href="privacy_policy.html" target="_blank" data-en="Policy" data-ar="السياسة">Policy</a></p>
+                <p class="language-btn"><a href="privacy_policy.html" data-en="Policy" data-ar="السياسة">Policy</a></p>
                 
             </div>
         </nav>
@@ -80,8 +80,8 @@
                     <div class="card app-card">
                         <img src="https://placehold.co/150x150/d1d5db/4b5563?text=Huruf" alt="Huruf App Icon" style="border-radius: 0.75rem; margin-bottom: 1rem;">
                         <div class="app-details">
-                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Huruf - حُرُوف" data-ar="حروف: لعبة الكلمات العربية">Huruf - حُرُوف</h3>
-                            <p style="margin-bottom: 1rem;" data-en="A word-finding game that challenges players to create as many Arabic words as possible from a grid of letters. Great for improving vocabulary." data-ar="لعبة للعثور على الكلمات تتحدى اللاعبين لإنشاء أكبر عدد ممكن من الكلمات العربية من شبكة من الحروف. رائعة لتحسين المفردات.">A word-finding game that challenges players to create as many Arabic words as possible from a grid of letters. Great for improving vocabulary.</p>
+                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Huruf – Word Game | حُرُوف data-ar="حروف: لعبة الكلمات العربية">Huruf – Word Game | حُرُوف</h3>
+                            <p style="margin-bottom: 1rem;" data-en="A word-finding game that challenges players to create as many Arabic words as possible from a circle of random of letters. Great for improving vocabulary." data-ar="لعبة للعثور على الكلمات تتحدى اللاعبين لإنشاء أكبر عدد ممكن من الكلمات العربية من شبكة من الحروف. رائعة لتحسين المفردات.">A word-finding game that challenges players to create as many Arabic words as possible from a grid of letters. Great for improving vocabulary.</p>
                             <a href="#" class="btn-primary" style="align-self: flex-start;" onclick="showAppDetails('huruf')" data-en="Learn More" data-ar="تعرف على المزيد">Learn More</a>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                     <div class="card app-card">
                         <img src="https://placehold.co/150x150/d1d5db/4b5563?text=Tarkib" alt="Tarkib App Icon" style="border-radius: 0.75rem; margin-bottom: 1rem;">
                         <div class="app-details">
-                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Tarkib: Scrabble-like Game" data-ar="تركيب: لعبة شبيهة بـ Scrabble">Tarkib: Scrabble-like Game</h3>
+                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Tarkiib - Arabic Board Game" data-ar="تركيب    ">Tarkib: Arabic Board Game</h3>
                             <p style="margin-bottom: 1rem;" data-en="A highly engaging multi-player game where players score points by building words on a board, with bonus squares and strategic play." data-ar="لعبة جماعية جذابة للغاية حيث يسجل اللاعبون النقاط عن طريق بناء الكلمات على لوحة، مع مربعات إضافية ولعب استراتيجي.">A highly engaging multi-player game where players score points by building words on a board, with bonus squares and strategic play.</p>
                             <a href="#" class="btn-primary" style="align-self: flex-start;" onclick="showAppDetails('tarkib')" data-en="Learn More" data-ar="تعرف على المزيد">Learn More</a>
                         </div>
@@ -98,8 +98,8 @@
                     <div class="card app-card">
                         <img src="https://placehold.co/150x150/d1d5db/4b5563?text=Finder" alt="Word Finder App Icon" style="border-radius: 0.75rem; margin-bottom: 1rem;">
                         <div class="app-details">
-                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Word Finder - ar | en" data-ar="باحث الكلمات العربية">Word Finder - ar | en</h3>
-                            <p style="margin-bottom: 1rem;" data-en="An invaluable tool for students and writers, this app helps you find perfect Arabic words by searching for synonyms, definitions, and related terms." data-ar="أداة لا تقدر بثمن للطلاب والكتّاب، يساعدك هذا التطبيق على العثور على الكلمات العربية المثالية من خلال البحث عن المرادفات والتعريفات والمصطلحات ذات الصلة.">An invaluable tool for students and writers, this app helps you find perfect Arabic words by searching for synonyms, definitions, and related terms.</p>
+                            <h3 class="card-title" style="font-size: 1.5rem; color: var(--primary-color);" data-en="Arabic WordFinder | Dictionary" data-ar="باحث الكلمات العربية">Arabic WordFinder | Dictionary</h3>
+                            <p style="margin-bottom: 1rem;" data-en="An invaluable tool for students and writers, this app helps you find perfect Arabic words from random Arabic letters by searching for synonyms, definitions, and related terms." data-ar="أداة لا تقدر بثمن للطلاب والكتّاب، يساعدك هذا التطبيق على العثور على الكلمات العربية المثالية من خلال البحث عن المرادفات والتعريفات والمصطلحات ذات الصلة.">An invaluable tool for students and writers, this app helps you find perfect Arabic words by searching for synonyms, definitions, and related terms.</p>
                             <a href="#" class="btn-primary" style="align-self: flex-start;" onclick="showAppDetails('wordFinder')" data-en="Learn More" data-ar="تعرف على المزيد">Learn More</a>
                         </div>
                     </div>
