--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    
+
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
@@ -17,7 +17,7 @@
     <style>
 
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Amiri', Consolas, 'Courier New', monospace;
             line-height: 1.6;
             margin: 0;
             padding: 0;
