--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -28,7 +28,7 @@
             padding-bottom: 50px; 
         }
         .policy-container {
-            max-width: 800px;
+            /* max-width: 800px; */
             margin: 2rem auto;
             padding: 1rem 1.5rem;
             border-radius: 8px;
