Just some changes

--- a/index.html
+++ b/index.html
@@ -178,12 +178,14 @@
                     <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-twitter"></i></a>
                     <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-x-twitter"></i></a>
+                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div>
                 <h3 class="footer-title" data-en="Contact" data-ar="اتصال">Contact</h3>
-                <p data-en="Email: info@raqamit.com" data-ar="البريد الإلكتروني: info@raqamit.com">Email: info@raqamit.com</p>
-                <p data-en="Phone: +234 xxxx-xxx-xxx" data-ar="الهاتف: xxxx-xxx-xxx (234)+">Phone: +234 xxxx-xxx-xxx</p>
+                <p data-en="Email: raqamit.solutions@gmail.com" data-ar="البريد الإلكتروني: raqamit.solutions@gmail.com">Email: raqamit.solutions@gmail.com</p>
+                <!-- <p data-en="Phone: +234 xxxx-xxx-xxx" data-ar="الهاتف: xxxx-xxx-xxx (234)+">Phone: +234 xxxx-xxx-xxx</p> -->
             </div>
         </div>
     </footer>
