--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -141,8 +141,8 @@
             </div>
             <div>
                 <h3 class="footer-title" data-en="Contact" data-ar="اتصال">Contact</h3>
-                <p data-en="Email: info@raqamit.com" data-ar="البريد الإلكتروني: info@raqamit.com">Email: info@raqamit.com</p>
-                <p data-en="Phone: +234 xxxx-xxx-xxx" data-ar="الهاتف: xxxx-xxx-xxx (234)+">Phone: +234 xxxx-xxx-xxx</p>
+                <p data-en="Email: raqamit.solutions@gmail.com" data-ar="البريد الإلكتروني: raqamit.solutions@gmail.com">Email: raqamit.solutions@gmail.com</p>
+                <!-- <p data-en="Phone: +234 xxxx-xxx-xxx" data-ar="الهاتف: xxxx-xxx-xxx (234)+">Phone: +234 xxxx-xxx-xxx</p> -->
             </div>
         </div>
     </footer>
