--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -57,19 +57,15 @@
             </a>
             
             <div class="nav-controls">
-                <!-- Theme toggle buttons with icons -->
-                <button id="theme-toggle-light" class="theme-btn">
-                    <i class="fas fa-sun"></i>
+                <button id="theme-toggle-btn" class="theme-btn" aria-label="Toggle theme mode">
+                    <i class="fas fa-adjust"></i> 
                 </button>
-                <button id="theme-toggle-dark" class="theme-btn">
-                    <i class="fas fa-moon"></i>
-                </button>
-                <button id="theme-toggle-teal" class="theme-btn">
-                    <i class="fas fa-palette"></i>
-                </button>
+
                 <button id="language-toggle-btn" class="language-btn">
                     <span id="language-text">العربية</span>
                 </button>
+                
+                <p class="language-btn"><a href="privacy_policy.html" data-en="Policy" data-ar="السياسة">Policy</a></p>
             </div>
         </nav>
     </header>
@@ -134,9 +130,11 @@
             <div>
                 <h3 class="footer-title" data-en="Follow Us" data-ar="تابعنا">Follow Us</h3>
                 <div class="social-icons">
-                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
+                    <!-- <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-twitter"></i></a>
-                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-linkedin-in"></i></a> -->
+                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-x-twitter"></i></a>
+                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div>
