--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -57,15 +57,19 @@
             </a>
             
             <div class="nav-controls">
-                <button id="theme-toggle-btn" class="theme-btn" aria-label="Toggle theme mode">
-                    <i class="fas fa-adjust"></i> 
+                <!-- Theme toggle buttons with icons -->
+                <button id="theme-toggle-light" class="theme-btn">
+                    <i class="fas fa-sun"></i>
                 </button>
-
+                <button id="theme-toggle-dark" class="theme-btn">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button id="theme-toggle-teal" class="theme-btn">
+                    <i class="fas fa-palette"></i>
+                </button>
                 <button id="language-toggle-btn" class="language-btn">
                     <span id="language-text">العربية</span>
                 </button>
-                
-                <p class="language-btn"><a href="privacy_policy.html" data-en="Policy" data-ar="السياسة">Policy</a></p>
             </div>
         </nav>
     </header>
