--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -137,13 +137,13 @@
                     <!-- <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-twitter"></i></a>
                     <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-linkedin-in"></i></a> -->
-                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-x-twitter"></i></a>
-                    <a href="#" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/Oghenemin_e?t=49Myj74d0mmuUiW-J8ofFg&s=09" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-x-twitter"></i></a>
+                    <a href="https://www.youtube.com/channel/UC6eULXnwXttVc7sVk8qiBng" style="font-size: 1.5rem; text-decoration: none;"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div>
                 <h3 class="footer-title" data-en="Contact" data-ar="اتصال">Contact</h3>
-                <p data-en="Email: raqamit.solutions@gmail.com" data-ar="البريد الإلكتروني: raqamit.solutions@gmail.com">Email: raqamit.solutions@gmail.com</p>
+                <p data-en="Email: raqam.itsolutions@gmail.com" data-ar="البريد الإلكتروني: raqam.itsolutions@gmail.com">Email: raqam.itsolutions@gmail.com</p>
                 <!-- <p data-en="Phone: +234 xxxx-xxx-xxx" data-ar="الهاتف: xxxx-xxx-xxx (234)+">Phone: +234 xxxx-xxx-xxx</p> -->
             </div>
         </div>
